--- a/main.html
+++ b/main.html
@@ -285,7 +285,7 @@
     <div class="overlay"></div>
     <div class="header-container" style="height:70px">
       <div class="header">
-        <strong>Ykute.com</strong>
+        <strong>Ykute.xyz</strong>
       </div>
       <div class="social-links">
         <a href="https://x.com/LordYakut" target="_blank">Twitter</a>
