--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
       </div>
       <div class="social-links">
         <a href="https://x.com/LordYakut" target="_blank">Twitter</a>
-        <a href="" target="_blank">Discord (Coming Soon)</a>
+        <a href="" target="_blank">Discord (Soon)</a>
       </div>
     </div>
     <div class="content">
