--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
       <p>Vincent, the founder of Ykute, is a solo developer who focuses on creating sickass multiplayer games. However, due to budget constraints, most of his games have failed. To address this, he created Ykute Token to improve his game's server efficiency and to help develop his own games with the goal of becoming a leader in the indie game market.</p>
       <div class="buttons">
         <a href="#">See Upcoming Games (Coming soon)</a>
-        <a href="#">Buy Token</a>
+        <a href="https://pump.fun/A9fzEdoG91Wpru37Gd24YgcBjy7zpJc3MbqAc85Rpump">Buy Token (Upcoming)</a>
       </div>
     </div>
   </div>
@@ -310,7 +310,7 @@
           <img src="https://yakutcoding.github.io/Ykute/image_2024-06-30_153627052.png" alt="Game Thumbnail">
           <div class="game-card-content" style="height: 240px;">
             <h3><b>ETERNAL MATCH</b></h3>
-            <p>A Stupid Gladiator multiplayer game, where you should kill each other. This Game was made with 10$ Budget only. (Because the publisher is too lazy. im not gonna develop it again)
+            <p>A Stupid Gladiator multiplayer game, where you should kill each other. This game isinspired by Record of ragnarok.
               <br><br>
               <button onclick="openUrl('https://play.google.com/store/apps/details?id=com.YKuteGames.EternalMatch&hl=en&gl=US')" class="buttonyt">Download (Android)</button>
             </p>
@@ -320,7 +320,7 @@
           <img src="https://yakutcoding.github.io/Ykute/image_2024-06-30_153755125.png" alt="Game Thumbnail">
           <div class="game-card-content">
             <h3><b>MURREL</b></h3>
-            <p>A Stupid Survival Hardcore game inspired by Muck and Minecraft, This game was winning the Devindo gamejam Award. This game was made with 0$ Budget.</p>
+            <p>A Stupid Survival Hardcore game inspired by Muck and Minecraft, This game was winning the Devindo gamejam Award. </p>
             <br>
             <button onclick="openUrl('https://yakut-developer.itch.io/murrel')" class="buttonyt">Download (Android,PC)</button>
             </p>
