--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
       <p>Vincent, the founder of Ykute, is a solo developer who focuses on creating sickass multiplayer games. However, due to budget constraints, most of his games have failed. To address this, he created Ykute Token to improve his game's server efficiency and to help develop his own games with the goal of becoming a leader in the indie game market.</p>
       <div class="buttons">
         <a href="#">See Upcoming Games (Coming soon)</a>
-        <a href="https://pump.fun/A9fzEdoG91Wpru37Gd24YgcBjy7zpJc3MbqAc85Rpump">Buy Token (Upcoming)</a>
+        <a href="https://pump.fun/A9fzEdoG91Wpru37Gd24YgcBjy7zpJc3MbqAc85Rpump">Buy Token (pump.fun)</a>
       </div>
     </div>
   </div>
